--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest test.js"
+    "test": "jest test.js",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@commitlint/cli": "^17.0.2",
+    "@commitlint/config-conventional": "^17.0.2",
+    "husky": "^8.0.1",
     "jest": "^28.1.0",
     "semantic-release": "^19.0.2"
   },
@@ -18,5 +22,6 @@
       "main",
       "next"
     ]
-  }
+  },
+  "dependencies": {}
 }
