--- a/package.json
+++ b/package.json
@@ -41,8 +41,18 @@
       ]
     ],
     "branches": [
+      "+([0-9])?(.{+([0-9]),x}).x",
       "main",
-      "next"
+      "next",
+      "next-major",
+      {
+        "name": "beta",
+        "prerelease": true
+      },
+      {
+        "name": "alpha",
+        "prerelease": true
+      }
     ]
   }
 }
